# CodeSummarizer

./: .gitignore  ARCHITECTURE.md  AUDIT_READINESS.md  LICENSE  PORTABLE.md  PRIVACY.md  README.md  RELEASE_NOTES.md  RESTRICTED_DEPLOYMENT.md  SECURITY.md  THREAT_MODEL.md  WINDOWS_RELEASE.md  create-icon.cjs  dev.bat  dev.sh  index.html  package-lock.json  package.json  prod.bat  prod.sh  setup.bat  setup.sh  vite.config.ts
.github/workflows/: repair-v1-release-assets.yml  windows-release.yml
scripts/: build-windows.ps1  check-release.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs  ollama.rs  prompt.rs  secrets.rs  types.rs
src/components/: CodeInput.tsx  ModelPicker.tsx  OutputPanel.tsx  RiskBadges.tsx
src/lib/: api.ts  languages.test.ts  languages.ts  schemas.test.ts  schemas.ts
