[package]
name = "code-summarizer"
version = "1.0.0"
description = "A local-first desktop application for private code analysis with Ollama"
authors = ["sekacorn <sekacorn@aol.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/sekacorn/CodeSummarizer"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
regex = "1.10"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]
